grafana/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
spec:
  ingressClassName: "traefik"
  rules:
  - host: grafana.k3d.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
